--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,9 @@ body,
 	min-width: 100%;
 	max-width: 100%;
 	height: 100%;
-	overflow-x: hidden;
-	overscroll-behavior-y: none;
+	/* overflow-x: hidden;
+	overscroll-behavior-y: none; */
+	overflow: hidden;
 }
 
 code {
@@ -57,6 +58,7 @@ code {
 	height: 100%;
 	width: 100%;
 	padding: var(--gap-o) 0;
+	overflow: hidden;
 	display: flex;
 	gap: var(--gap-o);
 	background-image: url('/public/bg-main.webp');
